unpackaged/main/default/objects/Brand_Product_Mapping__mdt/Brand_Product_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>It contains brands and their related products</description>
    <label>Brand Product Mapping</label>
    <pluralLabel>Brand Product Mappings</pluralLabel>
</CustomObject>