unpackaged/main/default/objects/Brand_Product_Mapping__mdt/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <label>Sorting Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>